--- a/crates/trap-buffer/Cargo.toml
+++ b/crates/trap-buffer/Cargo.toml
@@ -49,6 +49,12 @@ rand = { workspace = true }
 # HTTP Client (for flush)
 reqwest = { workspace = true }
 
+# Concurrency
+parking_lot = { workspace = true }
+
+# Lazy static initialization
+once_cell = "1.19"
+
 [dev-dependencies]
 tokio-test = { workspace = true }
 tempfile = { workspace = true }
